# obsidian-api

./: .dockerignore  .gitignore  CONSIDERATRIONS.md  Dockerfile  Makefile  README.md  compose.yaml  docker-compose.yml  obsidian-api.postman_collection.json  pyproject.toml  pytest.ini
app/: __init__.py  auth.py  authentication.py  dependencies.py  file_routes.py  folder_routes.py  main.py  models.py  path_validation.py  routes.py  utils.py  validation.py
tests/: conftest.py  test_routes.py
